fix white spaces on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 
 .calculator-container {
     width: 100%;
-    height: 95%;
+    height: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
